# kmd

./: .gitignore  Cargo.toml  KMD-BRAND-GUIDE.md  README.md  TODO-NEXT.md  build-client.sh  package-lock.json  package.json  playwright.config.ts
.github/workflows/: release.yml
client/: app.ts  index.html
client/components/: BottomTabBar.ts  CommandPalette.ts  FileTree.ts  HelpPanel.ts  SearchBar.ts  Sidebar.ts  Terminal.ts  WorkspacePanel.ts  icons.ts
client/lib/: log.ts  mermaid.ts  security.ts
client/pages/: DocsPage.ts  PortsPage.ts  ScriptsPage.ts  TerminalPage.ts
client/styles/: dev.css
docs/: SECURITY-AUDIT-CHECKLIST.md  csp-patterns.md  tunnel-edge-cases.md
docs/superpowers/specs/: 2026-03-21-polish-pass-design.md  2026-03-21-unified-log-stream-design.md
npm/getforma-dev/: package.json
npm/getforma-dev-darwin-arm64/: package.json
npm/getforma-dev-darwin-x64/: package.json
npm/getforma-dev-linux-x64/: package.json
npm/getforma-dev-win32-x64/: package.json
npm/kmd/: package.json
npm/kmd-darwin-arm64/: package.json
npm/kmd-darwin-x64/: package.json
npm/kmd-linux-arm64/: package.json
npm/kmd-linux-x64/: package.json
npm/kmd-win32-x64/: package.json
src/: db.rs  main.rs  server.rs  state.rs  ws.rs
src/services/: env.rs  git.rs  markdown.rs  mod.rs  parser.rs  port_allocator.rs  ports.rs  process.rs  scripts.rs  terminal.rs  terminal_ws.rs  tunnel.rs  watcher.rs  workspace.rs
tests/e2e/: app.spec.ts
