[package]
name = "kmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kmd"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
pulldown-cmark = "0.12"
syntect = "5"
notify = "7"
ignore = "0.4"
sysinfo = "0.32"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
